first mobile version

--- a/src/pages/main/components/SidePanel.module.css
+++ b/src/pages/main/components/SidePanel.module.css
@@ -6,7 +6,9 @@
 
 @media screen and (max-width: 1000px){
     .pageWrapper {
-        width: auto;
+        width: 100vw;
         padding: 10px;
+        position: fixed;
+        z-index: 1000;
     }
 }
