--- a/src/pages/main/components/PointInfoCard.module.css
+++ b/src/pages/main/components/PointInfoCard.module.css
@@ -6,6 +6,14 @@
     box-shadow: 0px 3px 3px rgba(0,0,0,0.1);
 }
 
+@media screen and (max-width: 1000px) {
+    .infoCardWrapper {
+        height: 20vh;
+        overflow: scroll;
+        margin-top: 0.75rem;
+    }
+}
+
 .dayWrapper {
     display: flex;
     padding: 0 1rem;
