small fix mobile css

--- a/src/pages/main/components/Filter.module.css
+++ b/src/pages/main/components/Filter.module.css
@@ -11,4 +11,11 @@
 
 .inputsWrapper {
     display: flex;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 1000px){
+    .btnWrapper {
+        margin-top: 10px;
+    }
 }
