--- a/src/pages/main/components/Map.module.css
+++ b/src/pages/main/components/Map.module.css
@@ -3,6 +3,11 @@
     min-width: 300px;
 }
 
+/*.mapContainer {*/
+/*    height: 100vh;*/
+/*    width: 100%;*/
+/*}*/
+
 @media screen and (max-width: 1000px){
     .pageWrapper {
         width: 100vw;
