--- a/src/pages/main/components/SidePanel.module.css
+++ b/src/pages/main/components/SidePanel.module.css
@@ -7,7 +7,7 @@
 @media screen and (max-width: 1000px){
     .pageWrapper {
         width: 100vw;
-        padding: 10px;
+        padding: 0.4rem;
         position: fixed;
         z-index: 1000;
         background-color: transparent;
