--- a/src/pages/main/components/Filter.module.css
+++ b/src/pages/main/components/Filter.module.css
@@ -38,6 +38,7 @@
 .simpleFilter {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .simpleReset {
@@ -45,26 +46,27 @@
     background-color: #fff;
     border: 1px solid #ccc;
     color: #333;
-    padding: 5px 10px;
+    padding: 0px 10px;
     margin: 0 10px;
     border-radius: 3px;
 }
 
 .simpleFilterPlusMinus {
     cursor: pointer;
-    padding: 5px 10px;
-    margin: 0 10px;
-    border-radius: 3px;
-    background-color: #999;
+    padding: 3px 10px 0px 10px;
+    border-radius: 1rem;
+    background-color: #bbb;
     color: #fff;
+    text-align: center;
 }
 
 .simpleFilterMiddle {
     cursor: pointer;
-    padding: 5px 10px;
-    background-color: #0092c1;
+    margin: 0 10px;
+    padding: 5px 8px 5px 10px;
+    background-color: rgb(2, 169, 230);
     color: #fff;
-    border-radius: 3px;
+    border-radius: 1.5rem;
 }
 
 .simpleExpand {
