--- a/src/pages/main/components/SidePanel.module.css
+++ b/src/pages/main/components/SidePanel.module.css
@@ -15,17 +15,18 @@
 }
 
 .advertisement {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #fff;
     border-radius: 0.7rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.7rem;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.1);
-    padding: 1rem;
+    padding: 0.5rem 1rem;
 }
 
 @media screen and (max-width: 1000px) {
     .advertisement {
         overflow: scroll;
-        margin-top: 0.75rem;
     }
 }
