fix bug in simple info

--- a/src/pages/main/components/PointInfoCard.module.css
+++ b/src/pages/main/components/PointInfoCard.module.css
@@ -32,6 +32,14 @@
     padding: 0.5rem 1rem;
 }
 
+/*Simple Info*/
+
+.monthEmptyPlaceholder {
+    font-size: 1.2rem;
+    color: #333;
+    padding: 0.5rem 1rem 0 1rem;
+}
+
 /*Btn group*/
 
 .BtnWrapper {
