--- a/src/pages/main/components/SidePanel.module.css
+++ b/src/pages/main/components/SidePanel.module.css
@@ -14,15 +14,26 @@
     }
 }
 
-.advertisement {
+.advertisementWrapper {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-color: #fff;
     border-radius: 0.7rem;
     margin-bottom: 0.7rem;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.1);
     padding: 0.5rem 1rem;
+}
+
+.advertisement {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.advertisementIcon {
+    display: flex;
+    justify-content: center;
+    margin-right: 15px;
 }
 
 @media screen and (max-width: 1000px) {
