--- a/src/pages/main/components/Filter.module.css
+++ b/src/pages/main/components/Filter.module.css
@@ -32,6 +32,7 @@
 .simpleFilterWrapper {
     font-size: 1rem;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -44,11 +45,11 @@
 .simpleReset {
     cursor: pointer;
     background-color: #fff;
-    border: 1px solid #ccc;
-    color: #333;
-    padding: 0px 10px;
+    border: 1px solid #999;
+    color: #999;
+    padding: 2px 10px;
     margin: 0 10px;
-    border-radius: 3px;
+    border-radius: 1rem;
 }
 
 .simpleFilterPlusMinus {
