--- a/src/pages/main/components/TripsCard.module.css
+++ b/src/pages/main/components/TripsCard.module.css
@@ -53,8 +53,8 @@
     flex-direction: row;
     align-items: center;
     border-radius: 0.8rem;
-    color: rgb(2, 169, 230);
+    color: #999;
     padding: 0rem 0.6rem;
-    border: 1px solid rgb(2, 169, 230);
+    border: 1px solid #999;
     margin-right: 0.6rem;
 }
