--- a/src/pages/main/components/Filter.module.css
+++ b/src/pages/main/components/Filter.module.css
@@ -6,20 +6,25 @@
     position: relative;
 }
 
+.filterCard {
+    transition: height ease 0.2s;
+    overflow: hidden;
+}
+
 .title {
     font-size: 1.5rem;
 }
 
-.title::after {
-    content: '?';
-    background-color: #9ae2ff;
-    font-size: 0.7rem;
-    padding: 0.2rem;
-    margin-left: 0.3rem;
-    border-radius: 1rem;
-    color: #fff;
-    position: absolute;
-}
+/*.title::after {*/
+/*    content: '?';*/
+/*    background-color: #9ae2ff;*/
+/*    font-size: 0.7rem;*/
+/*    padding: 0.2rem;*/
+/*    margin-left: 0.3rem;*/
+/*    border-radius: 1rem;*/
+/*    color: #fff;*/
+/*    position: absolute;*/
+/*}*/
 
 .inputsWrapper {
     display: flex;
