--- a/src/pages/main/components/TripsCard.module.css
+++ b/src/pages/main/components/TripsCard.module.css
@@ -1,14 +1,16 @@
 .pageWrapper {
+    height: 3rem;
     background-color: #fff;
-    margin-top: 2rem;
+    /*margin-top: 2rem;*/
     border-radius: 0.7rem;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.1);
     position: relative;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1000px){
     .pageWrapper {
-        margin-top: 0.75rem;
+        /*margin-top: 0.75rem;*/
     }
 }
 
