--- a/src/pages/main/components/info-components/DetailLimitInfo.module.css
+++ b/src/pages/main/components/info-components/DetailLimitInfo.module.css
@@ -1,30 +1,78 @@
 .monthWrapper {
     font-size: 1.5rem;
-    color: #3380a2;
-    padding: 0.5rem 1rem;
+    color: #333;
+    padding: 0.5rem 1rem 0 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .spliter {
-    height: 5px;
+    height: 1px;
     background-color: #efefef;
 }
 
 .dayWrapper {
     display: flex;
-    padding: 0 1rem;
-    justify-content: space-between;
+    align-items: center;
+    padding: 0 2.25rem 0 1rem;
     margin-bottom: 10px;
     margin-top: 10px;
 }
 
-.dayTitle {
+.daySection {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
 
-    color: #3380a2;
-    font-size: 1.25rem;
+.dayTitle {
+    color: #999;
+    font-size: 1rem;
 }
 
 .timeStyle {
     font-size: 1rem;
-    font-weight: bold;
-    color: #3380a2;
+    color: #999;
+}
+
+.iconSection {
+    width: 2.5rem;
+    display: flex;
+    align-items: center;
+}
+
+/*more details section*/
+.spotsWrapper {
+    font-size: 1rem;
+    color: #999;
+    padding: 0.5rem 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.positionWrapper {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    color: #999;
+}
+
+.positionSection {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.descriptionWrapper {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    color: #999;
+    padding: 0.5rem 1rem;
+}
+
+.BtnWrapper {
+    display: flex;
+    padding: 1rem 1rem 1rem 1rem;
 }
