--- a/src/pages/main/components/info-components/DetailLimitInfo.module.css
+++ b/src/pages/main/components/info-components/DetailLimitInfo.module.css
@@ -33,6 +33,9 @@
 .timeStyle {
     font-size: 1rem;
     color: #999;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .iconSection {
